platform-infra/clusters/qa/ingress/ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: env-qa-api-ingress
  namespace: env-qa
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`env-qa.appfactory.local`)
    priority: 10
    services:
    - name: env-qa
      namespace: env-qa
      port: 443
  tls:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
    passthrough: true
